# direct-http

./: .boring  TODO.txt  direct-http.cabal
Haskell/Network/: HTTP.hs
Network/: HTTP.hs
Test/: Main.hs  test.cabal
