name: test
version: 1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp
maintainer: "Irene Knapp" <ireney.knapp@gmail.com>
homepage: http://ireneknapp.com/software/
bug-reports: http://ireneknapp.com/issues/create/

Executable test
  main-is: Main.hs
  build-depends: base >= 4.5 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 mtl >= 2.0.1.0 && < 3,
                 network >= 2.3.0.11 && < 3,
                 utf8-string >= 0.3.7 && < 1,
                 time >= 1.4 && < 2,
                 old-locale >= 1.0.0.4 && < 2,
                 unix >= 2.5.1.0 && < 3,
                 direct-daemonize >= 3.0 && < 4,
                 direct-http >= 0.5.0.1 && < 1
  default-language: Haskell2010
